# dna-kyc-screener

./: .gitignore  CLAUDE.md  README.md  config.py  pyproject.toml
api/: main.py  routes.py  schemas.py
audit/: logger.py
core/: entity_screener.py  legitimacy_rules.py  risk_aggregator.py  sequence_screener.py
data/: embargoed_countries.json  legitimacy_matrix.json  select_agents.json
frontend/: index.html
tests/: conftest.py  test_entity_screener.py  test_legitimacy_rules.py  test_risk_aggregator.py  test_sequence_screener.py
tests/fixtures/: synthetic_sequences.py
